Unregister Image from Updater in dtor to avoid crashes

BUG:141546

svn path=/trunk/KDE/kdelibs/; revision=635326